[tool.poetry]
name = "ai-tuber"
version = "0.1.0"
description = ""
authors = ["koduki"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.11"
openai = "^1.7.2"
langchain-google-genai = "^0.0.6"
soundfile = "^0.12.1"
sounddevice = "^0.4.6"
obsws-python = "^1.6.2"
pytchat = "^0.5.5"
langchain-openai = "^0.0.2.post1"
langchainhub = "^0.1.14"
beautifulsoup4 = "^4.12.3"
grandalf = "^0.8"
chromadb = "^0.4.22"
flask = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
