[tool.poetry]
name = "ai-tuber"
version = "0.1.0"
description = ""
authors = ["koduki"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.2"
langchain-openai = "^0.1.16"
langchain-google-genai = "^1.0.7"
langchainhub = "^0.1.14"
langchain-experimental = "^0.0.62"
openai = "^1.7.2"
ollama = "^0.2.1"
soundfile = "^0.12.1"
sounddevice = "^0.4.6"
obsws-python = "^1.6.2"
pytchat = "^0.5.5"
beautifulsoup4 = "^4.12.3"
grandalf = "^0.8"
flask = "^3.0.2"
apscheduler = "^3.10.4"
google-api-python-client = "^2.127.0"
google-auth-oauthlib = "^1.2.0"
google-auth = "^2.29.0"
yfinance = "^0.2.40"
feedparser = "^6.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
